--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
+    "chartjs-plugin-annotation": "^3.1.0",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "react": "^18.2.0",
@@ -23,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-html2pdf": "^1.0.1",
     "react-router-dom": "^7.1.0",
+    "react-spinners": "^0.15.0",
     "recharts": "^2.15.0",
     "xlsx": "^0.18.5"
   },
