--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "jspdf-autotable": "^3.8.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.7",
+    "react-bootstrap-icons": "^1.11.5",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.2.0",
     "react-html2pdf": "^1.0.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.0",
     "react-spinners": "^0.15.0",
     "recharts": "^2.15.0",
